# clangdtest

clang-format/: CMakeLists.txt
clang-format/src/: hello.cpp  hello.h  main.cpp
clang-tidy/: .clang-tidy
clang-tidy/src/: hello.cpp  hello.h  main.cpp
clangdlsp/src/: main.cpp
